--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,20 +46,20 @@ jobs:
           name: dist
           path: ./App-pmuninstall-*.tar.gz
   test:
-    needs: [ 'dist' ]
+    needs: ['dist']
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         os: [macos-latest, windows-latest, ubuntu-latest]
         perl: ['5']
         include:
-          - { os: 'ubuntu-latest', perl: "5.8"  }
-          - { os: 'ubuntu-latest', perl: "5.14" }
-          - { os: 'ubuntu-latest', perl: "5.16" }
-          - { os: 'ubuntu-latest', perl: "5.20" }
-          - { os: 'ubuntu-latest', perl: "5.30" }
-          - { os: 'ubuntu-latest', perl: "5.32" }
-          - { os: 'ubuntu-latest', perl: "5.34" }
+          - { os: 'ubuntu-latest', perl: '5.8' }
+          - { os: 'ubuntu-latest', perl: '5.14' }
+          - { os: 'ubuntu-latest', perl: '5.16' }
+          - { os: 'ubuntu-latest', perl: '5.20' }
+          - { os: 'ubuntu-latest', perl: '5.30' }
+          - { os: 'ubuntu-latest', perl: '5.32' }
+          - { os: 'ubuntu-latest', perl: '5.34' }
     name: Perl ${{ matrix.perl }} on ${{ matrix.os }}
 
     steps:
